# XTrader

./: CMakeLists.txt  HPPackClient.cpp  HPPackClient.h  HPPackRiskClient.cpp  HPPackRiskClient.h  OrderServer.hpp  TraderEngine.cpp  TraderEngine.h  main.cpp
Config/: OESError.yml  StockTickerList.yml  TickerList.yml  XTrader.yml
TraderAPI/: CMakeLists.txt  FutureTradeGateWay.hpp  StockTradeGateWay.hpp  TradeGateWay.hpp
TraderAPI/CTP/: CMakeLists.txt  CTPTradeGateWay.cpp  CTPTradeGateWay.h
TraderAPI/OES/: CMakeLists.txt  OESTradeGateWay.cpp  OESTradeGateWay.h
TraderAPI/REM/: CMakeLists.txt  REMTradeGateWay.cpp  REMTradeGateWay.h
TraderAPI/Test/: CMakeLists.txt  TestTradeGateWay.cpp  TestTradeGateWay.h
TraderAPI/YD/: CMakeLists.txt  YDTradeGateWay.cpp  YDTradeGateWay.h
